<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/relativeStartLayout"
    android:background="@color/colorBackgroundWhite"
    android:orientation="vertical"
    tools:context=".StartActivity">

    <Button
        android:layout_width="315dp"
        android:layout_height="50dp"
        android:layout_below="@id/disclamer_content"
        android:layout_marginTop="60dp"
        android:text="@string/detect_text_buttun"
        android:fontFamily="@font/joseph"
        android:textAllCaps="false"
        android:id="@+id/detect_button_id"
        android:textSize="30sp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_border"/>

    <TextView
        android:id="@+id/disclamer_text"
        android:fontFamily="@font/joseph"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/disclamer_text"
        android:textColor="@color/colorBlack"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:textSize="38sp"/>

    <TextView
        android:id="@+id/disclamer_content"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:fontFamily="@font/joseph"
        android:layout_below="@id/disclamer_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/disclamer_content"
        android:textColor="@color/colorBlack"
        android:textAlignment="center"
        android:textSize="30sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp" />

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-8286875568812475/6708730340">
    </com.google.android.gms.ads.AdView>


</RelativeLayout>